# python-project-52

./: .env.sample  .gitignore  Makefile  README.md  build.sh  manage.py  pyproject.toml  setup.cfg
.github/workflows/: django_ci.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
static/docs/: RENDER_DEPLOY.md
task_manager/: asgi.py  context_processors.py  mixins.py  rollbar_middleware.py  settings.py  urls.py  views.py  wsgi.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: forms.py  models.py  tests.py  urls.py  utils.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/templates/: index.html
task_manager/users/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_password_and_more.py  0004_rename_password_user_password1_and_more.py  (+1 more)
templates/: base.html  form.html  index.html  login.html
templates/errors/: 404.html  500.html
templates/includes/: footer.html  navbar.html
templates/labels/: create.html  delete.html  index.html  update.html
templates/statuses/: create.html  delete.html  index.html  update.html
templates/tasks/: create.html  delete.html  detail.html  index.html  update.html
templates/users/: create.html  delete.html  index.html  registration_form.html  update.html
(+2 files in other folders)
